--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header class="header">
-      <a class="header__logo" href="./index.html">
+      <a class="header__logo" href="index.html">
         <img src="./images/logo.png" alt="Moyo logo">
       </a>
 
